[gd_scene load_steps=5 format=3 uid="uid://cyxex3x3o5stq"]

[ext_resource type="Script" uid="uid://du8aixxfkxh3w" path="res://hotbar_tarzan.gd" id="1_fnicm"]
[ext_resource type="Texture2D" uid="uid://bvqlhgp1gvukf" path="res://assets/vine_hook.png" id="2_fnicm"]
[ext_resource type="Texture2D" uid="uid://bpdw5dntwggms" path="res://assets/vine_grapple.png" id="3_xchw0"]
[ext_resource type="Texture2D" uid="uid://dkqmhr4q0agnp" path="res://assets/vine_grapple_attack.png" id="4_yoe2r"]

[node name="hotbar_tarzan" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fnicm")

[node name="GridContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Button" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 0
icon = ExtResource("2_fnicm")
icon_alignment = 1
expand_icon = true

[node name="RichTextLabel" type="Label" parent="GridContainer/Button"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = 5.0
offset_right = 20.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 0
text = "Q"
horizontal_alignment = 1

[node name="Button2" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 0
icon = ExtResource("3_xchw0")
icon_alignment = 1
expand_icon = true

[node name="RichTextLabel2" type="Label" parent="GridContainer/Button2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = 5.0
offset_right = 20.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 0
text = "R"
horizontal_alignment = 1

[node name="Button3" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
focus_mode = 0
icon = ExtResource("4_yoe2r")
icon_alignment = 1
expand_icon = true

[node name="RichTextLabel3" type="Label" parent="GridContainer/Button3"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = 5.0
offset_right = 20.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 0
text = "C"
horizontal_alignment = 1

[connection signal="pressed" from="GridContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GridContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="GridContainer/Button3" to="." method="_on_button_3_pressed"]
